fix vertical alignment of zoom buttons

--- a/app/stylesheets/criteria.css.less
+++ b/app/stylesheets/criteria.css.less
@@ -287,7 +287,7 @@
 
   .zoom {
     position : absolute;
-    top      : 0;
+    top      : -1px;
     bottom   : 0;
     width    : 29px;
     background-position : 50% 50%;
